Tools: README updates for enforced languages.

--- a/.tools/readmes/includes/overview.jinja2
+++ b/.tools/readmes/includes/overview.jinja2
@@ -6,4 +6,4 @@ Shows how to use the {{sdk['long']}} to work with {{service['long']}}.
 {{ customs['overview'] -}}
 <!--custom.overview.end-->
 
-*{{ service['short'] }} {{ service['blurb'] }}*
+_{{ service['short'] }} {{ service['blurb'] }}_
