--- a/.tools/readmes/includes/prerequisites.jinja2
+++ b/.tools/readmes/includes/prerequisites.jinja2
@@ -21,8 +21,11 @@ sample Hello World-style application.
 Next, for information on code example structures and how to build and run the examples, see [Getting started with the AWS SDK for C++ code examples](https://docs.aws.amazon.com/sdk-for-cpp/v1/developer-guide/getting-started-code-examples.html).
 
 {% endif %}
+{% if service == 'bedrock' %}
+> ⚠ You must request access to a model before you can use it. If you try to use the model (with the API or console) before you have requested access to it, you will receive an error message. For more information, see [Model access](https://docs.aws.amazon.com/bedrock/latest/userguide/model-access.html).
+
+{% endif %}
 
 <!--custom.prerequisites.start-->
 {{ customs['prerequisites'] -}}
 <!--custom.prerequisites.end-->
-
