--- a/.tools/readmes/includes/resources.jinja2
+++ b/.tools/readmes/includes/resources.jinja2
@@ -1,8 +1,8 @@
 ## Additional resources
 
-* [{{service['short']}} {{service['guide']['subtitle']}}]({{service['guide']['url']}})
-* [{{service['short']}} API Reference]({{service['api_ref']}})
-* [{{sdk['short']}} {{service['short']}} reference]({{lang_config['sdk_api_ref']}})
+- [{{service['short']}} {{service['guide']['subtitle']}}]({{service['guide']['url']}})
+- [{{service['short']}} API Reference]({{service['api_ref']}})
+- [{{sdk['short']}} {{service['short']}} reference]({{lang_config['sdk_api_ref']}})
 
 <!--custom.resources.start-->
 {{ customs['resources'] -}}
