--- a/.tools/readmes/includes/code_examples.jinja2
+++ b/.tools/readmes/includes/code_examples.jinja2
@@ -9,6 +9,7 @@
 {{ macs.list_examples(hello) }}
 {% endif %}
 {% if actions %}
+
 ### Single actions
 
 Code excerpts that show you how to call individual service functions.
@@ -30,3 +31,7 @@ Sample applications that work across multiple AWS services.
 
 {{ macs.list_examples(crosses) }}
 {% endif %}
+
+<!--custom.examples.start-->
+{{ customs['examples'] -}}
+<!--custom.examples.end-->
