Tools: WRITEME for python
Apply suggestions from code review

Co-authored-by: Rachel Hagerman <110480692+rlhagerm@users.noreply.github.com>

Apply suggestions from code review

Co-authored-by: Rachel Hagerman <110480692+rlhagerm@users.noreply.github.com>

Update python/example_code/s3/README.md

Co-authored-by: Rachel Hagerman <110480692+rlhagerm@users.noreply.github.com>

Added missing custom messages

--- a/.tools/readmes/includes/run_instructions.jinja2
+++ b/.tools/readmes/includes/run_instructions.jinja2
@@ -115,7 +115,7 @@ This example shows you how to do the following:
 {% if customs['scenario_prereqs'] %}{{ customs['scenario_prereqs'][scenario['id']] -}}{% endif %}
 <!--custom.scenario_prereqs.{{ scenario['id'] }}.end-->
 
-{% if lang_config['name'] == 'Python' and lang_config['sdk_ver'] == 3 %}
+{% if lang_config['name'] == 'Python' and lang_config['sdk_ver'] == 3 and scenario["file"].endswith(".py") %}
 Start the example by running the following at a command prompt:
 
 ```
