--- a/.tools/readmes/includes/run_instructions.jinja2
+++ b/.tools/readmes/includes/run_instructions.jinja2
@@ -36,7 +36,7 @@ Alternatively, you can run the example from within your IDE.
 
 {% endif %}
 {% if lang_config['name'] == 'C++' %}
-An executable is built for each source file. These executables are located in the build folder and have
+An executable is built for each source file in this folder. These executables are located in the build folder and have
 "run_" prepended to the source file name, minus the suffix. See the "main" function in the source file for further instructions.
 
 For example, to run the action in the source file "my_action.cpp", execute the following command from within the build folder. The command
@@ -45,6 +45,9 @@ will display any required arguments.
 ```
 ./run_my_action
 ```
+
+If the source file is in a different folder, instructions can be found in the README in that
+folder.
 {% endif %}
 {% if lang_config['name'] == 'Swift' %}
 To build any of these examples from a terminal window, navigate into its
