Add basics to WRITEME code and templates.

--- a/.tools/readmes/includes/code_examples.jinja2
+++ b/.tools/readmes/includes/code_examples.jinja2
@@ -8,6 +8,14 @@
 
 {{ macs.list_examples(hello) }}
 {% endif %}
+{% if basics %}
+
+### Basics
+
+Code examples that show you how to perform the essential operations within a service.
+
+{{ macs.list_examples(basics) }}
+{% endif %}
 {% if actions %}
 
 ### Single actions
