--- a/.tools/readmes/includes/run_instructions.jinja2
+++ b/.tools/readmes/includes/run_instructions.jinja2
@@ -11,10 +11,21 @@ node ./actions/<fileName>
 ```
 
 **Run a scenario**
+
 Most scenarios can be run with the following command:
 ```bash
 node ./scenarios/<fileName>
 ```
+
+**Run with options**
+
+Some actions and scenarios can be run with options from the command line:
+```bash
+node ./scenarios/<fileName> --option1 --option2
+```
+[util.parseArgs](https://nodejs.org/api/util.html#utilparseargsconfig) is used to configure
+these options. For the specific options available to each script, see the `parseArgs` usage
+for that file.
 {% endif %}
 {% if lang_config['name'] == '.NET' and lang_config['sdk_ver'] == 3 %}
 For general instructions to run the examples, see the
